--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
             <section id="home" class="hero">
                 <div class="container">
                     <h1>Welcome to DESIGN AI</h1>
-                    <p>Empowering businesses and individuals with cutting-edge AI solutions. Let's shape the future together.</p>
-                    <p>Our mission is to bridge the gap between technology and humanity by providing accessible, innovative, and sustainable AI solutions. Whether you're a startup or an established enterprise, we are here to help you unlock the full potential of artificial intelligence.</p>
+                    <p>Empowering businesses and individuals with cutting-edge AI solutions. Together, we can shape a smarter, brighter future.</p>
+                    <p>At DESIGN AI, we believe in the transformative power of artificial intelligence. From startups to global enterprises, we are your trusted partner in unlocking the limitless potential of AI innovation.</p>
+                    <p>Our mission is simple yet profound: to make AI accessible, ethical, and impactful for everyone. Join us on this journey to revolutionize industries and create a better tomorrow.</p>
                     <img src=".github/hello_pic.jpg" alt="Welcome to DESIGN AI" class="responsive-img">
                 </div>
             </section>
@@ -51,8 +52,9 @@
             <section id="about">
                 <div class="container">
                     <h1>About Us</h1>
-                    <p>At DESIGN AI, we are passionate about making AI accessible to everyone. Founded in 2025 by Agastya Naik, we are committed to open-source innovation and delivering impactful AI solutions.</p>
-                    <p>Our team consists of experienced professionals who specialize in various AI domains, including machine learning, natural language processing, and computer vision. We believe in the power of collaboration and strive to create solutions that are not only effective but also ethical and sustainable.</p>
+                    <p>DESIGN AI is more than just a technology company; we are pioneers in the AI revolution. Founded in 2025 by visionary Agastya Naik, our mission is to make AI accessible, ethical, and impactful for everyone.</p>
+                    <p>Our team of experts specializes in cutting-edge technologies like machine learning, natural language processing, and computer vision. We are committed to creating solutions that inspire, empower, and transform industries worldwide.</p>
+                    <p>With a focus on innovation and collaboration, we strive to bridge the gap between technology and humanity, ensuring that AI serves as a force for good in the world.</p>
                 </div>
             </section>
 
@@ -64,17 +66,17 @@
                         <div class="feature">
                             <i class="fas fa-brain"></i>
                             <h2>Innovative AI</h2>
-                            <p>We leverage the latest advancements in AI to deliver cutting-edge solutions.</p>
+                            <p>Harness the power of advanced AI algorithms to solve complex challenges and drive innovation.</p>
                         </div>
                         <div class="feature">
                             <i class="fas fa-users"></i>
                             <h2>User-Centric Design</h2>
-                            <p>Our solutions are designed with the end-user in mind for maximum impact.</p>
+                            <p>Our solutions are crafted with the user in mind, ensuring seamless integration and maximum impact.</p>
                         </div>
                         <div class="feature">
                             <i class="fas fa-lock"></i>
                             <h2>Secure & Reliable</h2>
-                            <p>We prioritize security and reliability in all our AI services.</p>
+                            <p>We prioritize security and reliability, delivering solutions you can trust in every scenario.</p>
                         </div>
                     </div>
                 </div>
@@ -90,12 +92,15 @@
                         <li>AI Integration Services</li>
                         <li>AI Training and Workshops</li>
                     </ul>
-                    <p>We offer a comprehensive range of services tailored to meet the unique needs of our clients. From strategic consulting to hands-on development, our experts work closely with you to ensure the success of your AI initiatives. Whether you need to integrate AI into your existing systems or build custom solutions from scratch, we have the expertise to deliver exceptional results.</p>
+                    <p>From strategic consulting to hands-on development, our services are tailored to meet your unique needs. Whether you're integrating AI into existing systems or building custom solutions, we deliver results that exceed expectations.</p>
                 </div>
             </section>
+
+            <!-- Contact Section -->
             <section id="contact">
                 <div class="container">
                     <h1>Contact Us</h1>
+                    <p>Have questions or need assistance? We're here to help. Reach out to us anytime:</p>
                     <p>Email: <a href="mailto:agastya.naik27@outlook.com">agastya.naik27@outlook.com</a></p>
                 </div>
             </section>
