--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#features">Features</a></li>
                         <li><a href="#services">Services</a></li>
+                        <li><a href="content.html">Content</a></li> <!-- Added link to content.html -->
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
@@ -54,7 +55,7 @@
                     <h1>About Us</h1>
                     <p>DESIGN AI is more than just a technology company; we are pioneers in the AI revolution. Founded in 2025 by visionary Agastya Naik, our mission is to make AI accessible, ethical, and impactful for everyone.</p>
                     <p>Our team of experts specializes in cutting-edge technologies like machine learning, natural language processing, and computer vision. We are committed to creating solutions that inspire, empower, and transform industries worldwide.</p>
-                    <p>With a focus on innovation and collaboration, we strive to bridge the gap between technology and humanity, ensuring that AI serves as a force for good in the world.</p>
+                    <p>With a focus on innovation and collaboration, we strive to bridge the gap between technology and humanity, ensuring that AI serves as a force for good in the world. Our vision is to create a future where AI enhances lives and drives progress in every sector.</p>
                 </div>
             </section>
 
@@ -93,6 +94,7 @@
                         <li>AI Training and Workshops</li>
                     </ul>
                     <p>From strategic consulting to hands-on development, our services are tailored to meet your unique needs. Whether you're integrating AI into existing systems or building custom solutions, we deliver results that exceed expectations.</p>
+                    <p>Our team works closely with you to understand your goals and challenges, ensuring that every solution is aligned with your vision. Let us help you harness the power of AI to achieve your business objectives.</p>
                 </div>
             </section>
 
